--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
     <link rel="apple-touch-icon" href="./images/favicon.png" type="image/png"/>
     <script src="./scripts/set-theme.js"></script>
   </head>
-  <body class="page">d
+  <body class="page">
     <header class="header">
+      <h1 class="header_title">&lt;/HTML&gt;</h1>
+      <p class="header_subtitle">закрывающий тег</p>
       <nav class="theme-menu header__theme-menu">
         <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
         <ul class="theme-menu__list">
@@ -44,9 +46,16 @@
         </ul>
       </nav>
     </header>
-    <main>
-
-       <!--дискета, fill убрать (из фигма)?-->
+    <main class="content">
+      <article class="content__card">
+        <h2>Фритрек и нулевой спринт: Подготовка к работе</h2>
+        <img src="./images/image.png"/>
+        <p>Это было самое начало пути. На этом этапе важно было проникнуться основами и настроиться на учёбу. 
+          И, возможно, подумать, как новые знания могут повлиять на ваше будущее.</p>
+        <p>Место для ваших воспоминаний о начале обучения.</p>
+        <button>Like</button>
+      </article>
+       <!--дискета, (fill убрать из фигма?)-->
       <svg viewBox="0 0 29 28" width="29" height="28" fill="none">
         <use href="#floppy" class="floppy">
       </svg>
