--- a/index.html
+++ b/index.html
@@ -29,12 +29,7 @@
             </button>
           </li>
           <li class="theme-menu__item">
-            <button
-              type="button"
-              data-theme="auto"
-              disabled
-              class="theme-menu__button"
-            >
+            <button type="button" data-theme="auto" disabled class="theme-menu__button">
               Авто
             </button>
           </li>
@@ -57,72 +52,31 @@
           <p>Это было самое начало пути. На этом этапе важно было проникнуться основами и настроиться на учёбу. 
           И, возможно, подумать, как новые знания могут повлиять на ваше будущее.</p>
           <p>Место для ваших воспоминаний о начале обучения.</p>
-
           <div class="content__card-btn-like">
-            <!--<svg viewBox="0 0 27 24" width="27" height="24" fill="none">
-              <use href="#heart" class="heart"></use>
-            </svg>-->
-            <button class="like-icon">
-              <svg xmlns="http://www.w3.org/2000/svg" width="27" height="24" fill="none">
+            <button class="like-icon-button" type="button">
+              <svg xmlns="http://www.w3.org/2000/svg" class="like-icon" width="27" height="24" fill="none">
                 <path fill="#000" d="M6 0H3v3h3V0ZM9 0H6v3h3V0ZM3 3H0v3h3V3ZM3 6H0v3h3V6ZM3 9H0v3h3V9ZM12 0H9v3h3V0ZM6 12H3v3h3v-3ZM9 15H6v3h3v-3ZM12 18H9v3h3v-3ZM21 0h3v3h-3V0ZM18 0h3v3h-3V0ZM24 3h3v3h-3V3ZM24 6h3v3h-3V6ZM24 9h3v3h-3V9ZM15 0h3v3h-3V0ZM21 12h3v3h-3v-3ZM18 15h3v3h-3v-3ZM15 18h3v3h-3v-3ZM15 3h-3v3h3V3ZM15 21h-3v3h3v-3Z"/>
               </svg>
             </button>
-            <button class="card__like-button">
+            <button class="card__like-button" type="button">
               <span class="button__text">Like</span>
             </button>
           </div>
         </div>
       </article>
-
-      <button class="footer">
-        <!--дискета, (fill убрать из фигма?)-->
-        <svg viewBox="0 0 29 28" width="29" height="28" fill="none">
-          <use href="#floppy" class="floppy">
+      <button class="save_button" type="button">
+        <svg viewBox="0 0 29 28" width="29" height="28" fill="none" class="img-floppy">
+          <use href="#floppy">
         </svg>
         <span class="button__text">Сохранить на память</span>
       </button>
-       
-      
     </main>
     <script src="./scripts/like.js"></script>
   </body>
 </html>
-<!--heart svg
-<svg xmlns="http://www.w3.org/2000/svg" 
-    width="27" 
-    height="24" 
-    viewBox="0 0 27 24" 
-    fill="none">
-  <symbol id="heart">
-      <path d="M6 0H3V3H6V0Z" fill="black"/>
-      <path d="M9 0H6V3H9V0Z" fill="black"/>
-      <path d="M3 3H0V6H3V3Z" fill="black"/>
-      <path d="M3 6H0V9H3V6Z" fill="black"/>
-      <path d="M3 9H0V12H3V9Z" fill="black"/>
-      <path d="M12 0H9V3H12V0Z" fill="black"/>
-     <path d="M6 12H3V15H6V12Z" fill="black"/>
-      <path d="M9 15H6V18H9V15Z" fill="black"/>
-      <path d="M12 18H9V21H12V18Z" fill="black"/>
-      <path d="M21 0H24V3H21V0Z" fill="black"/>
-      <path d="M18 0H21V3H18V0Z" fill="black"/>
-     <path d="M24 3H27V6H24V3Z" fill="black"/>
-     <path d="M24 6H27V9H24V6Z" fill="black"/>
-      <path d="M24 9H27V12H24V9Z" fill="black"/>
-      <path d="M15 0H18V3H15V0Z" fill="black"/>
-      <path d="M21 12H24V15H21V12Z" fill="black"/>
-      <path d="M18 15H21V18H18V15Z" fill="black"/>
-      <path d="M15 18H18V21H15V18Z" fill="black"/>
-      <path d="M15 3H12V6H15V3Z" fill="black"/>
-      <path d="M15 21H12V24H15V21Z" fill="black"/>
-  </symbol>
-</svg>
--->
+
 <!--floppy svg-->
-<svg  xmlns="http://www.w3.org/2000/svg" 
-      width="29" 
-      height="28" 
-      fill="none"
->
+<svg xmlns="http://www.w3.org/2000/svg" width="29" height="28" fill="none">
   <symbol id="floppy" stroke="currentColor" fill="currentColor">    
     <path fill="#000" d="M.5 0h2.154v2.154H.5zM.5 2.154h2.154v2.154H.5zM.5 4.308h2.154v2.154H.5zM.5 6.462h2.154v2.154H.5z"/>
     <path fill="#000" d="M.5 8.615h2.154v2.154H.5zM.5 10.769h2.154v2.154H.5zM.5 12.923h2.154v2.154H.5zM.5 15.077h2.154v2.154H.5zM.5 17.231h2.154v2.154H.5zM.5 19.385h2.154v2.154H.5z"/>
@@ -143,5 +97,5 @@
     <path fill="#000" d="M9.116 25.846V28H6.962v-2.154zM6.96 25.846V28H4.808v-2.154zM4.807 25.846V28H2.653v-2.154zM28.5 28h-2.154v-2.154H28.5zM28.5 25.846h-2.154v-2.154H28.5z"/>
     <path fill="#000" d="M28.5 23.693h-2.154v-2.154H28.5zM28.5 21.539h-2.154v-2.154H28.5zM28.5 19.385h-2.154V17.23H28.5zM28.5 17.23h-2.154v-2.154H28.5z"/>
     <path fill="#000" d="M28.5 15.077h-2.154v-2.154H28.5zM28.5 12.923h-2.154V10.77H28.5zM28.5 10.77h-2.154V8.616H28.5zM28.5 8.615h-2.154V6.461H28.5zM28.5 6.461h-2.154V4.307H28.5z"/>
-</symbol>
+  </symbol>
 </svg>
