--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               </svg>
             </button>
             <button class="card__like-button" type="button">
-              <span class="buttontext">Like</span>
+              <span class="button__text">Like</span>
             </button>
           </div>
         </div>
